kustomize/overlays/test/monitoring/opensearch-dashboards-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards-nodeport
spec:
  type: NodePort
  selector:
    app: os-dashboards
  ports:
    - name: http
      port: 5601
      targetPort: 5601
      nodePort: 30601
